--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "tic-tac-toe-typescript",
   "version": "1.0.0",
-  "description": "",
-  "main": "public/index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Md-Dipu/tic-tac-toe-typescript.git"
