--- a/tsconfig.json
+++ b/tsconfig.json
@@ -90,11 +90,11 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": [
-    "src"
-  ],
   "exclude": [
     "src/types.ts",
-    "src/interfaces"
+    "src/interfaces/**/*.ts"
+  ],
+  "include": [
+    "src"
   ]
 }
