--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tic-tac-toe-typescript",
-  "version": "1.0.0",
+  "version": "v1.1",
   "scripts": {
     "dev-build": "npx tsc",
     "dev-watch": "npx tsc -watch"
