--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tic-tac-toe-typescript",
-  "version": "v1.1",
+  "version": "1.1.0",
   "description": "Purpose of making the web game is learning typescript. Interaction with dom and make functionality for the web-page. To visite live demo [click-here](https://tic-tac-toe-ts1.netlify.app/).",
   "source": "src/index.html",
   "scripts": {
